# nikls

./: .gitignore  Domain.hs  Main.hs  README  README.md  Store.hs  View.hs  frontend.html  nikls.cabal  stack.yaml
src/: Api.hs  Db.hs  Main.hs  Model.hs  Render.hs  Server.hs
static/: style.css
test/: Test.hs
