name:                nikls
version:             0.0.0.0
synopsis:            Nikls Is Kinda Like Scred
description:         See README.md
homepage:            https://github.com/opqdonut/nikls#readme
license:             UnspecifiedLicense
author:              Joel Kaasinen
maintainer:          joel.kaasinen@gmail.com
copyright:           2016 Joel Kaasinen
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable nikls
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , servant == 0.7
                     , servant-server == 0.7
                     , text
                     , wai
                     , warp
  main-is:             Main.hs
  other-modules:       Model Api
