name:                nikls
version:             0.0.0.0
synopsis:            Nikls Is Kinda Like Scred
description:         See README.md
homepage:            https://github.com/opqdonut/nikls#readme
license:             UnspecifiedLicense
author:              Joel Kaasinen
maintainer:          joel.kaasinen@gmail.com
copyright:           2016 Joel Kaasinen
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable nikls
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , servant == 0.8.1
                     , servant-server == 0.8.1
                     , sqlite-simple
                     , text
                     , transformers
                     , wai
                     , wai-cors
                     , wai-middleware-static
                     , wai-extra
                     , warp
  main-is:             Main.hs
  other-modules:       Model Api Render Db
