name:                nikls
version:             0.0.0.0
synopsis:            Nikls Is Kinda Like Scred
description:         See README.md
homepage:            https://github.com/opqdonut/nikls#readme
license:             UnspecifiedLicense
author:              Joel Kaasinen
maintainer:          joel.kaasinen@gmail.com
copyright:           2016 Joel Kaasinen
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , servant == 0.8.1
                     , servant-server == 0.8.1
                     , sqlite-simple
                     , text
                     , transformers
                     , wai
                     , wai-cors
                     , wai-middleware-static
                     , wai-extra
                     , warp
  exposed-modules:     Server Model Api Render Db

executable nikls
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , nikls

test-suite test
  type: exitcode-stdio-1.0
  main-is: Test.hs
  build-depends:       QuickCheck
                     , base >= 4.7 && < 5
                     , test-framework
                     , test-framework-quickcheck2
                     , nikls
                     , containers
  hs-source-dirs:      test
  default-language:    Haskell2010